# FileOrganizer

./: .gitignore  CMakeLists.txt  DOCUMENTATION.md  DOCUMENTATION_UPDATES.md  LICENSE  README.md  WEB-INTERFACE-GUIDE.md  build.bat  launch-web.bat  run.sh
FileOrganizer/: .gitignore  run.sh
FileOrganizer/src/core/: DocumentFile.h  File.cpp  File.h  FileHandler.h  ImageFile.h  VideoFile.h
FileOrganizer/src/utils/: FileUtils.cpp  FileUtils.h
build_test/: CPackConfig.cmake  CPackSourceConfig.cmake
build_test/file-organizer.dir/Release/: file-organizer.exe.recipe
build_test/file-organizer.dir/Release/file-organizer.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build_test/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
build_test/x64/Release/ALL_BUILD/ALL_BUILD.tlog/: ALL_BUILD.lastbuildstate  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
build_test/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
build_test/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
src/: file_organizer.cpp  file_organizer.h  fileorganizer.cpp  main.cpp  main_simple_cli_with_undo.cpp
src/core/: AudioFile.cpp  AudioFile.h  DocumentFile.cpp  FileHandler.cpp  ImageFile.cpp  VideoFile.cpp
web/: README.md  app.js  index.html  server.js  start.bat  start.sh  styles.css
